launchpad-buildd (230) UNRELEASED; urgency=medium

  * Apply black and isort.
  * Enforce shellcheck in pre-commit.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 07 Feb 2023 20:02:04 +0000

launchpad-buildd (229) focal; urgency=medium

  * Call dpkg-architecture with -a rather than setting DEB_HOST_ARCH, to
    avoid a warning if gcc isn't installed.
  * Prevent the kernel from killing launchpad-buildd if it runs out of
    memory.
  * Restructure lxd group membership handling to avoid requiring the lxd
    snap to be installed at postinst time.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 31 Jan 2023 12:34:34 +0000

launchpad-buildd (228) focal; urgency=medium

  * In CI jobs, chown the VCS tree to buildd:buildd after fetching it, since
    otherwise lpcraft running as the buildd user can't read its .git
    directory.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 26 Jan 2023 15:06:30 +0000

launchpad-buildd (227) focal; urgency=medium

  * Tolerate receiving "builder_constraints": None.
  * Check the appropriate server.key path for the LXD snap.
  * Run lpcraft as the buildd user to allow nvidia.runtime=true to work.
  * Create nvidia* devices in such a way that they can be used by nested
    containers.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 26 Jan 2023 01:11:57 +0000

launchpad-buildd (226) focal; urgency=medium

  * Remove unused "distribution" argument from the binarypackage manager.
    This was only used with the old internal sbuild fork, which we dropped
    in launchpad-buildd 127.
  * Remove the old "distroseries_name" argument from the sourcepackagerecipe
    manager, which duplicated the common "series" argument.
  * If the "gpu-nvidia" constraint is specified, then pass through an NVIDIA
    GPU to the LXD container, and pass the "--gpu-nvidia" option to lpcraft.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 23 Jan 2023 17:42:51 +0000

launchpad-buildd (225) focal; urgency=medium
