@@ -2,6 +2,8 @@ launchpad-buildd (230) UNRELEASED; urgency=medium
 
   * Apply black and isort.
   * Enforce shellcheck in pre-commit.
+  * Add an option to disable the proxy after the "pull" phase of a snap
+    recipe build.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 07 Feb 2023 20:02:04 +0000
 
